[package]
authors = ["Justin Kilpatrick <justin@althea.net>", "Michał Papierski <michal@papierski.net>"]
description = "A highly portable, batteries included, transaction generation and key management library for CosmosSDK blockchains"
edition = "2021"
license = "Apache-2.0"
name = "deep_space"
repository = "https://github.com/althea-net/deep_space"
version = "2.23.3"

[dependencies]
base64 = "0.21"
bech32 = "0.9"
bytes = "1.0"
clarity = {version = "1.2", optional = true}
hmac = {version = "0.12"}
log = "0.4"
num-traits = "0.2"
num256 = "0.5"
pbkdf2 = {version = "0.12"}
prost = "0.12"
prost-types = "0.12"
rand = {version = "0.8"}
ripemd = "0.1"
rust_decimal = "1.9"
secp256k1 = {version = "0.28", features = ["global-context"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sha3 = {version = "0.10", optional = true}
tokio = {version = "1", features = ["time"]}
tonic = {version = "0.10", features = ["gzip"]}
unicode-normalization = {version = "0.1"}

althea_proto = {version = "0.5", optional = true}
cosmos-sdk-proto = {package = "cosmos-sdk-proto-althea", version = "0.16"}
titan-cosmos-sdk-proto = {git = "https://github.com/titantkx/titan-rust-proto.git", tag = "v3.0.0", package = "cosmos-sdk-proto-titan"}

[dev-dependencies]
actix-rt = "2.2"
env_logger = "0.10"
rand = "0.8"

[features]
althea = ["ethermint", "dep:althea_proto"]
default = ["ssl"]
ethermint = ["clarity", "sha3"]
ssl = ["tonic/tls", "tonic/tls-roots"]
